--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,14 @@
-# Change Log
+# Changelog
+
+All notable changes to this project will be documented in this file.
+
+## [0.1.1] - 2025-05-04
+### Added
+- Login Endpoint
+- Reset Password Endpoint
+- Unit testing is added
+
+### Changed
+
+
+### Fixed
