--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,3 +12,14 @@ All notable changes to this project will be documented in this file.
 
 
 ### Fixed
+
+
+## [0.1.2] - 2025-05-07
+### Added
+- Reset Password Sucess Email
+- Checking Reset Token FUnction
+
+### Changed
+
+
+### Fixed
