--- a/CHANGELOG
+++ b/CHANGELOG
@@ -55,3 +55,18 @@ All notable changes to this project will be documented in this file.
 ### Fixed
 
 
+## [0.1.5] - 2025-05-28
+### Added
+- Product GetAll and Find Implemented
+
+### Removed
+
+
+### Changed
+- Added Category CRUD Implementation with Validaiton Check with product
+
+
+### Fixed
+
+
+
