--- a/CHANGELOG
+++ b/CHANGELOG
@@ -77,3 +77,23 @@ All notable changes to this project will be documented in this file.
 - Jenkins Pipeline for Docker Build and Push to Docker Registry (Fix)
 
 
+
+
+## [0.1.5] - 2025-05-30
+### Added
+- CartItem Controller, Cart Controllerm , and routes Implemented
+- OrderItem Controller, Order Controller, and routes implemented
+
+### Removed
+
+
+### Changed
+
+
+### Fixed
+
+
+### Todo 
+- Learn how to make unittest functions
+
+
