--- a/CHANGELOG
+++ b/CHANGELOG
@@ -79,10 +79,11 @@ All notable changes to this project will be documented in this file.
 
 
 
-## [0.1.5] - 2025-05-30
+## [0.1.6] - 2025-05-30
 ### Added
 - CartItem Controller, Cart Controllerm , and routes Implemented
 - OrderItem Controller, Order Controller, and routes implemented
+- Postman Collection Testcases Implemented
 
 ### Removed
 
@@ -94,6 +95,5 @@ All notable changes to this project will be documented in this file.
 
 
 ### Todo 
-- Learn how to make unittest functions
 
 
