--- a/CHANGELOG
+++ b/CHANGELOG
@@ -97,7 +97,7 @@ All notable changes to this project will be documented in this file.
 ### Todo 
 
 
-## [0.1.6] - 2025-06-04
+## [0.1.7] - 2025-06-04
 ### Added
 
 ### Removed
@@ -111,10 +111,11 @@ All notable changes to this project will be documented in this file.
 ### Todo 
 
 
-## [0.1.6] - 2025-06-04
+## [0.1.8] - 2025-06-012
 ### Added
 - Added Address Model for easier maintanence
 - Payment Method is implemented
+- Review Model Added
 
 ### Removed
 
@@ -126,4 +127,7 @@ All notable changes to this project will be documented in this file.
 ### Fixed
 
 ### Todo 
+- Connect Review Model to other Models
+- Make API Endpoint for everything that exists
+- Review Composition and association relationship
 
