--- a/CHANGELOG
+++ b/CHANGELOG
@@ -155,3 +155,4 @@ All notable changes to this project will be documented in this file.
 ### Todo 
 - Make API Endpoint for everything that exists (DHK)
 - Review Composition and association relationship (DHK)
+- Swagger Port for Dev instead of Postman(?)
