--- a/CHANGELOG
+++ b/CHANGELOG
@@ -282,6 +282,7 @@ app.get('/api/images/:filename', async (req, res) => {
 
 ### Added
 - CORS compatibility
+- test Dataset Inserted for Frontend Developing
 
 ### Removed
 
