--- a/CHANGELOG
+++ b/CHANGELOG
@@ -299,3 +299,22 @@ app.get('/api/images/:filename', async (req, res) => {
 - Swagger Port for Dev instead of Postman(?)
 - Think about how to manage profile images and product images
 - Sharp Integration for Image Uploads
+
+## [0.1.11.3] - 2025-06-16
+
+### Added
+- Product search by ID implemented
+
+
+### Changed
+- Migrated Biome v1.9 to Biome v2.0
+
+### Fixed
+
+
+### Todo 
+- Make API Endpoint for everything that exists (DHK)
+- Review Composition and association relationship (DHK)
+- Swagger Port for Dev instead of Postman(?)
+- Think about how to manage profile images and product images
+- Sharp Integration for Image Uploads
