--- a/CHANGELOG
+++ b/CHANGELOG
@@ -356,3 +356,20 @@ app.get('/api/images/:filename', async (req, res) => {
 - Swagger Port for Dev instead of Postman(?)
 - Think about how to manage profile images and product images
 - Sharp Integration for Image Uploads
+
+
+## [0.1.11.6] - 2025-06-26
+
+### Added
+- Added Corresponding Review Ratings
+
+### Changed
+
+### Fixed
+
+### Todo 
+- Make API Endpoint for everything that exists (DHK)
+- Review Composition and association relationship (DHK)
+- Swagger Port for Dev instead of Postman(?)
+- Think about how to manage profile images and product images
+- Sharp Integration for Image Uploads
