--- a/CHANGELOG
+++ b/CHANGELOG
@@ -373,3 +373,23 @@ app.get('/api/images/:filename', async (req, res) => {
 - Swagger Port for Dev instead of Postman(?)
 - Think about how to manage profile images and product images
 - Sharp Integration for Image Uploads
+
+
+
+
+## [0.1.12.0] - 2025-06-27
+
+### Added
+- Custom Mail Controller
+
+### Changed
+- Migrating from testmail to nodemail with mnml template
+
+### Fixed
+
+### Todo 
+- Make API Endpoint for everything that exists (DHK)
+- Review Composition and association relationship (DHK)
+- Swagger Port for Dev instead of Postman(?)
+- Think about how to manage profile images and product images
+- Sharp Integration for Image Uploads
