--- a/CHANGELOG
+++ b/CHANGELOG
@@ -394,3 +394,21 @@ app.get('/api/images/:filename', async (req, res) => {
 - Swagger Port for Dev instead of Postman(?)
 - Think about how to manage profile images and product images
 - Sharp Integration for Image Uploads
+
+
+## [0.1.12.0] - 2025-06-29
+
+### Added
+- Fixed the backend for using stripe
+
+### Changed
+
+
+### Fixed
+
+### Todo 
+- Make API Endpoint for everything that exists (DHK)
+- Review Composition and association relationship (DHK)
+- Swagger Port for Dev instead of Postman(?)
+- Think about how to manage profile images and product images
+- Sharp Integration for Image Uploads
